--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 /* CSS files add styling rules to your content */
 
+*{
+   
+  margin:0;
+  padding:0;
+  
+}
+
+
+
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
@@ -17,9 +26,8 @@ h1 {
 }
 
 #qp{
-  font-size: 200%;
-  color: dimgray;
-}
+  font-size: 190%;
+  }
 
 
 body {
@@ -33,4 +41,5 @@ h1 {
  text-align: center;
  font: italic 200% fantasy;
 }
+
 
