--- a/style.css
+++ b/style.css
@@ -1,28 +1,91 @@
 /* CSS files add styling rules to your content */
 
-*{
-   
+{
+
   margin:0;
   padding:0;
-  
+
 }
 
 
 
 body {
   font-family: helvetica, arial, sans-serif;
-  margin: 2em;
+  /margin: 2em;
+  /
+}
+
+#navigationBar {
+  margin: 0px;
+  width: 100%;
+  height: 95px;
+  background-color:#f2b1d8;
+  border: #ff1d58;
 }
 
 h1 {
-  font-style: italic;
-  color: #373fff;
+  float: left;
+  margin-left: 25px;
+  margin-top: 25px;
+  color:  #4DA8DA;
 }
+
+
+nav {
+  float: right;
+  margin-right: 50px;
+}
+
+nav p{
+  display: inline-block;
+  margin-top: 35px;
+  padding-left: 25px;
+}
+
+#bannerImage {
+  width: 100%;
+  height: auto;
+  position: absolute;
+}
+
+img {
+   
+   top: 0;
+   width: 35%;
+   height: 35%;
+   
+}
+
+
+
+h2 {
+  position: relative;
+  margin-left: 25px;
+  margin-top: -500px;
+  font-size: 75px;
+}
+
+#buttonCall {
+  background-color: lightgrey;
+  color: black;
+  position: relative;
+  width: 145px;
+  height: 36px;
+  border: solid 3px black;
+  margin-left: 25px;
+  margin-top: 25px;
+}
+
+#buttonCall p {
+  text-align: center;
+  margin-top: 10px;
+}
+
 
 #map{
   height:500px;
   width:100%
-  
+
 }
 
 #qp{
@@ -31,15 +94,8 @@ h1 {
 
 
 body {
- background-color: #333300;
- color: #FFFFFF;
+ background-color: #E8CEBF;
+ color: #111111;
 }
 
-
-h1 {
- color: #FFFF34;
- text-align: center;
- font: italic 200% fantasy;
-}
-
-
+ 
